--- a/SupportForMeVKLib/SupportForMeVKLib.csproj
+++ b/SupportForMeVKLib/SupportForMeVKLib.csproj
@@ -89,6 +89,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Account.cs" />
+    <Compile Include="Friends.cs" />
     <Compile Include="Massage.cs" />
     <Compile Include="Status.cs" />
     <Compile Include="SupportVK.cs" />
